fix: Adjusting layouts to fix overflowing components

--- a/frontend/amundsen_application/static/css/_layouts.scss
+++ b/frontend/amundsen_application/static/css/_layouts.scss
@@ -110,7 +110,6 @@ $close-btn-size: 24px;
       border-right: $spacer-half solid $divider;
       flex-basis: $left-panel-width;
       flex-shrink: 0;
-      min-height: min-content;
       overflow-y: auto;
       padding: 0 $spacer-3 $aside-separation-space;
 
@@ -162,7 +161,6 @@ $close-btn-size: 24px;
       border-left: $spacer-half solid $divider;
       flex-basis: $right-panel-width;
       flex-shrink: 0;
-      min-height: min-content;
       overflow-y: auto;
       padding: 0 $spacer-3 $aside-separation-space;
 
@@ -218,7 +216,6 @@ $close-btn-size: 24px;
       flex-basis: $main-content-panel-width;
       flex-grow: 1;
       flex-shrink: 0;
-      overflow-y: scroll;
       width: 0; // Required for text truncation
     }
 
