--- a/frontend/amundsen_application/static/js/pages/TableDetailPage/styles.scss
+++ b/frontend/amundsen_application/static/js/pages/TableDetailPage/styles.scss
@@ -60,10 +60,6 @@ $width-increment-5: $width-increment * 5;
     }
   }
 
-  .has-open-right-panel .nav.nav-tabs {
-    width: calc(100% - #{$total-panel-width});
-  }
-
   @media (max-width: $base-max-width) {
     .has-open-right-panel .nav.nav-tabs {
       width: calc(100% - #{$total-panel-width - $width-increment-1});
@@ -113,20 +109,40 @@ $width-increment-5: $width-increment * 5;
   }
 
   .column-tab-action-buttons {
-    background-color: $body-bg;
+    background-color: transparent;
     display: flex;
     align-items: center;
     gap: $spacer-2;
-    position: fixed;
+    position: absolute;
     z-index: 6;
     padding: 20px $spacer-2 3px $spacer-1;
 
+    @mixin action-button-positions {
+      right: unset;
+      position: relative;
+      padding: 8px 0px 0px 14px;
+      margin-bottom: -16px;
+      gap: unset;
+
+      > button {
+        padding-right: 0px;
+      }
+    }
+
     &.has-closed-right-panel {
       right: 0;
+
+      @media (max-width: calc(#{$base-max-width - $width-increment-1})) {
+        @include action-button-positions;
+      }
     }
 
     &.has-open-right-panel {
-      right: calc(#{$right-panel-width});
+      right: 0;
+
+      @media (max-width: calc(#{$base-max-width + $width-increment-3})) {
+        @include action-button-positions;
+      }
     }
   }
 
